--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ img {
     content: " ";
 }*/
 .about {
-    background:  #ffc907;
+    background:  #999999;
     padding: 5em 0;
     height: 600px;
 
@@ -142,7 +142,7 @@ img {
     height: 20px;
     margin-bottom: 20px;
     overflow: hidden;
-    background-color: #f5f5f5;
+    background-color:#00cccc;
     border-radius: 4px;
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
@@ -155,7 +155,7 @@ img {
     line-height: 20px;
     color: #fff;
     text-align: center;
-    background-color: #1B242F;
+    background-color:  #66ff66;
     -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
     box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
     -webkit-transition: width .6s ease;
